added imports, kinda setting things up

--- a/res/main.scss
+++ b/res/main.scss
@@ -1,1 +1,7 @@
-$font=Roboto, sans-setif
+$font=Roboto, sans-setif;
+$color1=#404040
+$color2=#808080
+@import forms;
+@import header;
+@import footer;
+@import cards;
